Support for multiple drag handles; removed Velocity dep for the addon; fix for screen flicker in Safari

--- a/tests/dummy/app/styles/app.sass
+++ b/tests/dummy/app/styles/app.sass
@@ -49,3 +49,4 @@ body
 
 .floating
   box-shadow: 0 3px 3px rgba(0,0,0,0.15)
+  z-index: 1050
